Finished layout for radio buttons and tip input

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="tip2">20%</string>
     <string name="tip3">25%</string>
     <string name="cTip">Custom</string>
+    <string name="numPeople">Number of people</string>
 </resources>
